2005-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/format-page.py: Refactor.
	(get_menu): Be safer.

	* site/template.ihtml: New file.

2005-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): announce 2.5.9

2005-01-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile: 
	* scripts/format-page.py: Update i18n.

2005-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Simplify.  Move style attributes to newweb.css.
	Move news to news.ihtml.

	* site/menu-entries.py: Gettextize link names.

	* scripts/format-page.py: Handle i18n.  Add @.ihtml@ and
	_@gettext@ subtsitutions.

	* GNUmakefile: Add i18n stuff.

	* po/:
	* nl/: New dir.

2005-01-22  Graham Percival  <gperlist@shaw.ca>

	* site/devel/participating/standards.html: fix typo.

	* site/devel/participating/index.html: added info about contributing
	to documentation.

2005-01-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/index.html: announce 2.5.8

2004-12-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/test.ly: update test.ly

2004-12-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/faq.html (href): add biabconverter

2004-12-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/faq.html (href): add nwc2ly
 
2004-11-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/advantages.html (href): typo
	
2004-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/index.html: add planet ccrma release.

2004-11-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/doneet.html: update donations page.

2004-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/getting-started.html (Usage): Update to 2.4
	syntax.  Run indent-region, HTML fixes.  Avoid using `here' for
	link names.

2004-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/using.html (href): upgrade to 2.4

2004-10-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/index.html (href): rephrase.

2004-10-30  Graham Percival  <gperlist@shaw.ca>
