@@ -1,10 +1,10 @@
-<title>LilyPond, muzieknotatie voor iedereen</title>
+<title>LilyPond, bladmuziek voor iedereen</title>
 
 <p class="top">
   <tt>http://lilypond.org</tt>
   <a href="http://sca.uwaterloo.ca/lilypond/lilypond.org/web/">
     <tt>.ca</tt>
-    mirror
+    server
   </a>
 </p>
 
@@ -12,7 +12,7 @@
 
 <h1 class="top">
   LilyPond
-  <span class="top">... muzieknotatie voor iedereen</span>
+  <span class="top">... bladmuziek voor iedereen</span>
   <br>
   <br>
   <img src="@IMAGES@monet-fragment.jpeg">
@@ -26,34 +26,34 @@
       de LelieVijver in
     </th>
     <th class="news">
-      Ms. Manners
+      Muziek
       <br>
-      of Music Printing
+      Misdrukken
     </th>
   </tr>
 
   <tr>
     <td>
       <p>
-	Computer printouts of sheet music usually look dull.  LilyPond
-	is different: it can make beautiful sheet music.  Use it for
-	your music too!
+	Computerafdrukken van bladmuziek zien er meestal saai uit.
+	LilyPond is anders: ze kan prachtige bladmuziek maken.
+	Gebruik Lelie ook voor jouw muziek!
       </p>
       <p class="teaser">
-	More
-	<a href="switch/">about LilyPond... </a>
+	Meer
+	<a href="switch/">over LilyPond... </a>
       </p>
     </td>
 
     <td>
       <p>
-	What sets LilyPond apart from other programs?  Why did we
-	revive the aesthetics of traditionally engraved music?  How
-	did we do it?
+	Wat maakt LilyPond zo anders dan andere programma's?  Waarom
+	laten we de schoonheid van traditioneel gegraveerde muziek
+	herleven?  En hoe doen we dat?
       </p>
       <p class="teaser">
-	This, and more in
-	<a href="about/automated-engraving/">our essay...</a>
+	Dat, en meer in
+	<a href="about/automated-engraving/">ons essay...</a>
       </p>
     </td>
   </tr>
@@ -75,7 +75,7 @@
       @news.ihtml@
 
       <p class="teaser">
-	<a href="old-news.html">older news...</a>
+	<a href="old-news.html">ouder nieuws...</a>
       </p>
 
     </td>
@@ -84,9 +84,9 @@
 
       <table class="links">
 	<tr>
-	  <th>Tak</th>
+	  <th>tak</th>
 	  <th>versie</th>
-	  <th>jump to</th>
+	  <th>spring naar</th>
 	</tr>
 	
 	<tr>
